Prevent race when pad caps is set on gstreamer player https://bugs.webkit.org/show_bug.cgi?id=115355

Patch by Thiago Santos <thiago.sousa.santos@collabora.com> on 2013-06-04
Reviewed by Philippe Normand.

Prevent race when pad caps is set on gstreamer player and
Also protect internal paint buffer with a mutex.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp:
(WebCore::MediaPlayerPrivateGStreamerBase::MediaPlayerPrivateGStreamerBase):
(WebCore::MediaPlayerPrivateGStreamerBase::~MediaPlayerPrivateGStreamerBase):
(WebCore::MediaPlayerPrivateGStreamerBase::naturalSize):
(WebCore::MediaPlayerPrivateGStreamerBase::triggerRepaint):
(WebCore::MediaPlayerPrivateGStreamerBase::paint):
* platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.h:
(MediaPlayerPrivateGStreamerBase):

Canonical link: https://commits.webkit.org/135457@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151175 268f45cc-cd09-0410-ab3c-d52691b4dbfc